Made the description under the title centered and readable, added a play button and added animations, glow, beautiful color and shadow, fixed a few bugs with the font and with the animation of the title and description.

--- a/assets/css/page-buttons.css
+++ b/assets/css/page-buttons.css
@@ -1,4 +1,4 @@
-.colorful-button {
+.colorful-button-primary {
     --duration: 7s;
     --delay: 0s;
     --easing: linear;
@@ -32,8 +32,7 @@
     box-shadow: 0 0 20px var(--c-shadow);
     margin: 0 20px;
 }
-
-.colorful-button:before {
+.colorful-button-primary:before {
     content: "";
     pointer-events: none;
     position: absolute;
@@ -45,35 +44,19 @@
     border-radius: 24px;
     box-shadow: inset 0 4px 12px var(--c-shadow-inset-top), inset 0 -4px 6px var(--c-shadow-inset-bottom);
 }
-
-.colorful-button.light {
-    --delay: 0.15s;
-    --c-color-1: rgba(172, 160, 255, 0.15);
-    --c-color-2: rgba(110, 171, 255, 0.15);
-    --c-color-3: rgba(255, 255, 255, 0.5);
-    --c-color-4: rgba(109, 88, 255, 0.15);
-    --c-shadow: rgba(0, 76, 180, 0.1);
-    --c-shadow-inset-top: white;
-    --c-shadow-inset-bottom: white;
-    --c-radial-inner: #eceffc;
-    --c-radial-outer: #fff;
-    --c-color: black;
-}
-
-.colorful-button .wrapper {
+.colorful-button-primary .wrapper {
     -webkit-mask-image: -webkit-radial-gradient(white, black);
     overflow: hidden;
     border-radius: 24px;
     min-width: 132px;
-    padding: 9px 0;
+    padding: 12px 0;
 }
-
-.colorful-button .wrapper span {
+.colorful-button-primary .wrapper span {
     display: inline-block;
     position: relative;
     z-index: 1;
 }
-.colorful-button .wrapper .circle {
+.colorful-button-primary .wrapper .circle {
     position: absolute;
     left: 0;
     top: 0;
@@ -87,77 +70,77 @@
     animation: var(--animation, none) var(--duration) var(--easing) infinite var(--delay);
 }
 
-.colorful-button .wrapper .circle.circle-1, .colorful-button .wrapper .circle.circle-9, .colorful-button .wrapper .circle.circle-10 {
+.colorful-button-primary .wrapper .circle.circle-1, .colorful-button-primary .wrapper .circle.circle-9, .colorful-button-primary .wrapper .circle.circle-10 {
     --background: var(--c-color-4);
 }
-.colorful-button .wrapper .circle.circle-3, .colorful-button .wrapper .circle.circle-4 {
+.colorful-button-primary .wrapper .circle.circle-3, .colorful-button-primary .wrapper .circle.circle-4 {
     --background: var(--c-color-2);
     --blur: 14px;
 }
-.colorful-button .wrapper .circle.circle-5, .colorful-button .wrapper .circle.circle-6 {
+.colorful-button-primary .wrapper .circle.circle-5, .colorful-button-primary .wrapper .circle.circle-6 {
     --background: var(--c-color-3);
     --blur: 16px;
 }
-.colorful-button .wrapper .circle.circle-2, .colorful-button .wrapper .circle.circle-7, .colorful-button .wrapper .circle.circle-8, .colorful-button .wrapper .circle.circle-11, .colorful-button .wrapper .circle.circle-12 {
+.colorful-button-primary .wrapper .circle.circle-2, .colorful-button-primary .wrapper .circle.circle-7, .colorful-button-primary .wrapper .circle.circle-8, .colorful-button-primary .wrapper .circle.circle-11, .colorful-button-primary .wrapper .circle.circle-12 {
     --background: var(--c-color-1);
     --blur: 12px;
 }
-.colorful-button .wrapper .circle.circle-1 {
+.colorful-button-primary .wrapper .circle.circle-1 {
     --x: 0;
     --y: -40px;
     --animation: circle-1;
 }
-.colorful-button .wrapper .circle.circle-2 {
+.colorful-button-primary .wrapper .circle.circle-2 {
     --x: 92px;
     --y: 8px;
     --animation: circle-2;
 }
-.colorful-button .wrapper .circle.circle-3 {
+.colorful-button-primary .wrapper .circle.circle-3 {
     --x: -12px;
     --y: -12px;
     --animation: circle-3;
 }
-.colorful-button .wrapper .circle.circle-4 {
+.colorful-button-primary .wrapper .circle.circle-4 {
     --x: 80px;
     --y: -12px;
     --animation: circle-4;
 }
-.colorful-button .wrapper .circle.circle-5 {
+.colorful-button-primary .wrapper .circle.circle-5 {
     --x: 12px;
     --y: -4px;
     --animation: circle-5;
 }
-.colorful-button .wrapper .circle.circle-6 {
+.colorful-button-primary .wrapper .circle.circle-6 {
     --x: 56px;
     --y: 16px;
     --animation: circle-6;
 }
-.colorful-button .wrapper .circle.circle-7 {
+.colorful-button-primary .wrapper .circle.circle-7 {
     --x: 8px;
     --y: 28px;
     --animation: circle-7;
 }
-.colorful-button .wrapper .circle.circle-8 {
+.colorful-button-primary .wrapper .circle.circle-8 {
     --x: 28px;
     --y: -4px;
     --animation: circle-8;
 }
-.colorful-button .wrapper .circle.circle-9 {
+.colorful-button-primary .wrapper .circle.circle-9 {
     --x: 20px;
     --y: -12px;
     --animation: circle-9;
 }
-.colorful-button .wrapper .circle.circle-10 {
+.colorful-button-primary .wrapper .circle.circle-10 {
     --x: 64px;
     --y: 16px;
     --animation: circle-10;
 }
-.colorful-button .wrapper .circle.circle-11 {
+.colorful-button-primary .wrapper .circle.circle-11 {
     --x: 4px;
     --y: 4px;
     --animation: circle-11;
 }
-.colorful-button .wrapper .circle.circle-12 {
+.colorful-button-primary .wrapper .circle.circle-12 {
     --blur: 14px;
     --x: 52px;
     --y: 4px;
