--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,9 @@ body::before {
     margin: 0;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
+    right: 50%;
+    transform: translate(50%, -50%);
+
 }
 /* Заголовок */
 .page-title {
@@ -185,13 +187,15 @@ body::before {
 }
 
 /* Применяем анимацию ко всем заголовкам и тексту */
-.page-title-animate {
+.page-title {
     animation: fadeIn 1.2s ease-in-out;
 }
 
 .page-title2 {
     font-size: 32px;
     font-weight: 400; /* Полностью жирный текст */
+    max-width: 600px;
+    margin: 0 auto;
 }
 
 .page-title2 {
